tests/snapshots/youtube__music_artist_no_more_albums.snap
---
source: tests/youtube.rs
expression: artist
---
MusicArtist(
  id: "UCOR4_bSVIXPsGa4BbCSt60Q",
  name: "Trailerpark",
  header_image: "[header_image]",
  description: None,
  wikipedia_url: None,
  subscriber_count: "[subscriber_count]",
  tracks: "[tracks]",
  albums: [
    AlbumItem(
      id: "MPREb_8PsIyll0LFV",
      name: "Bleib in der Schule",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
          name: "Trailerpark",
        ),
      ],
      artist_id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
      album_type: single,
      year: Some(2014),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_HPXN9BBzFpV",
      name: "TP4L",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
          name: "Trailerpark",
        ),
      ],
      artist_id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
      album_type: single,
      year: Some(2017),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_POeT6m0bw9q",
      name: "Crackstreet Boys II X Version",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
          name: "Trailerpark",
        ),
      ],
      artist_id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
      album_type: ep,
      year: Some(2014),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_R6EV2L1q0oc",
      name: "Armut treibt Jugendliche in die Popmusik",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
          name: "Trailerpark",
        ),
      ],
      artist_id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
      album_type: single,
      year: Some(2017),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_UYdRV1nnK2J",
      name: "TP4L",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
          name: "Trailerpark",
        ),
      ],
      artist_id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
      album_type: album,
      year: Some(2017),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_bi34SGT1xlc",
      name: "Crackstreet Boys 3 (Bonus Tracks Version)",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
          name: "Trailerpark",
        ),
      ],
      artist_id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
      album_type: album,
      year: Some(2014),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_hcK0fXETEf9",
      name: "Endlich normale Leute",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
          name: "Trailerpark",
        ),
      ],
      artist_id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
      album_type: single,
      year: Some(2017),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_kLvmX2AzYBL",
      name: "Bleib in der Schule (Live at Wacken 2019)",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
          name: "Trailerpark",
        ),
      ],
      artist_id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
      album_type: single,
      year: Some(2014),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_oHieBHkXn3A",
      name: "Dicks Sucken",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
          name: "Trailerpark",
        ),
      ],
      artist_id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
      album_type: single,
      year: Some(2014),
      by_va: false,
    ),
    AlbumItem(
      id: "MPREb_tdFqP579jQz",
      name: "Bleib in der Schule (Live in Berlin)",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
          name: "Trailerpark",
        ),
      ],
      artist_id: Some("UCOR4_bSVIXPsGa4BbCSt60Q"),
      album_type: single,
      year: Some(2024),
      by_va: false,
    ),
  ],
  playlists: "[playlists]",
  similar_artists: "[artists]",
  tracks_playlist_id: Some("OLAK5uy_miHesZCUQY5S9EwqfoNP2tZR9nZ0NBAeU"),
  videos_playlist_id: Some("OLAK5uy_mqbgE6T9uvusUWrAxJGiImf4_P4dM7IvQ"),
  radio_id: Some("RDEM7AbogW0cCnElSU0WYm1GqA"),
)
