tests/snapshots/youtube__music_artist_only_singles_intl.snap
---
source: tests/youtube.rs
expression: artist
---
MusicArtist(
  id: "UCfwCE5VhPMGxNPFxtVv7lRw",
  name: "[name]",
  header_image: "[header_image]",
  description: "[description]",
  wikipedia_url: "[wikipedia_url]",
  subscriber_count: "[subscriber_count]",
  tracks: "[tracks]",
  albums: [
    AlbumItem(
      id: "MPREb_vq8dZfFBEdx",
      name: "[name]",
      cover: "[cover]",
      artists: [
        ArtistId(
          id: Some("UCfwCE5VhPMGxNPFxtVv7lRw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCfwCE5VhPMGxNPFxtVv7lRw"),
      album_type: single,
      year: Some(2019),
      by_va: false,
    ),
  ],
  playlists: "[playlists]",
  similar_artists: "[artists]",
  tracks_playlist_id: None,
  videos_playlist_id: Some("OLAK5uy_lmH3iVq6lqjsnLkBWzpvRTh0DidLzbU-I"),
  radio_id: Some("RDEMYsk_DTFHAng1G7n5toi_oA"),
)
