tests/snapshots/youtube__music_details_mv.snap
---
source: tests/youtube.rs
expression: track
---
TrackDetails(
  track: TrackItem(
    id: "ZeerrnuLi5E",
    title: "Black Mamba",
    duration: Some(230),
    cover: "[cover]",
    artists: [
      ArtistId(
        id: Some("UCEdZAdnnKqbaHOlv8nM6OtA"),
        name: "aespa",
      ),
    ],
    artist_id: Some("UCEdZAdnnKqbaHOlv8nM6OtA"),
    album: None,
    view_count: Some(235000000),
    is_video: true,
    track_nr: None,
  ),
  lyrics_id: Some("MPLYt_wrKjTn9hmry"),
  related_id: Some("MPTRt_wrKjTn9hmry"),
)
