tests/snapshots/youtube__music_details_track.snap
---
source: tests/youtube.rs
expression: track
---
TrackDetails(
  track: TrackItem(
    id: "7nigXQS1Xb0",
    name: "INVU",
    duration: Some(205),
    cover: "[cover]",
    artists: [
      ArtistId(
        id: Some("UCwzCuKxyMY_sT7hr1E8G1XA"),
        name: "TAEYEON",
      ),
    ],
    artist_id: Some("UCwzCuKxyMY_sT7hr1E8G1XA"),
    album: Some(AlbumId(
      id: "MPREb_4xbv14CiQJm",
      name: "INVU - The 3rd Album",
    )),
    view_count: "[view_count]",
    is_video: false,
    track_nr: None,
    by_va: false,
  ),
  lyrics_id: Some("MPLYt_4xbv14CiQJm-1"),
  related_id: Some("MPTRt_4xbv14CiQJm-1"),
)
