tests/snapshots/youtube__music_details_track_details.snap
---
source: tests/youtube.rs
expression: track
---
TrackDetails(
  track: TrackItem(
    id: "1eekOcpx_iQ",
    name: "NCT 127 \'Highway to Heaven\' NEO CITY Tour Film ver.",
    duration: Some(202),
    cover: "[cover]",
    artists: [
      ArtistId(
        id: Some("UCk2E0dbAyEJWnrN2bbQOcbg"),
        name: "NCT 127",
      ),
    ],
    artist_id: Some("UCk2E0dbAyEJWnrN2bbQOcbg"),
    album: None,
    view_count: "[view_count]",
    track_type: video,
    track_nr: None,
    by_va: false,
    unavailable: false,
  ),
  lyrics_id: None,
  related_id: None,
)
